Stop forcing dark mode on samsung internet

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 :root {
   --font-sans: ${sans.style.fontFamily};
+  color-scheme: light only;
 }
 
 @supports (font: -apple-system-body) and (-webkit-appearance: none) {
